compile_log.txt
[ 61%] Built target libzstd_static
[ 61%] Building CUDA object CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_manager.cu.o
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1319): error: "h_custom_meta" has already been declared in the current scope
        CustomMetadataFrame h_custom_meta;
                            ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1320): error: class "cuda_zstd::CustomMetadataFrame" has no member "magic"
        h_custom_meta.magic = CUSTOM_METADATA_MAGIC;
                      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1321): error: class "cuda_zstd::CustomMetadataFrame" has no member "original_size"
        h_custom_meta.original_size = uncompressed_size;
                      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1322): error: class "cuda_zstd::CustomMetadataFrame" has no member "num_blocks"
        h_custom_meta.num_blocks = num_blocks;
                      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1322): error: identifier "num_blocks" is undefined
        h_custom_meta.num_blocks = num_blocks;
                                   ^

5 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu".
make[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:105: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_manager.cu.o] Error 2
make[2]: *** [CMakeFiles/Makefile2:279: CMakeFiles/cuda_zstd_static.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:286: CMakeFiles/cuda_zstd_static.dir/rule] Error 2
make: *** [Makefile:179: cuda_zstd_static] Error 2
